:wrench: Update Keywords

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "assertion",
     "common",
-    "domain driven design",
+    "utilities",
     "validate",
     "validation",
     "validator"
