--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "files": [
     "dist"
   ],
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/vapurrmaid/Validate"
