--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vapurrmaid/validate",
-  "version": "0.0.0",
+  "version": "0.1.0-beta.0",
   "description": "Zero-dependency lightweight class for assisting in highly-readable, maintainable validation. Inspired by the Java library org.apache.commons.lang3.Validate and its use in Domain Driven Design.",
   "keywords": [
     "assertion",
