--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,8 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "editor.formatOnPaste": true,
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    {
-      "autoFix": true,
-      "language": "typescript"
-    },
-    {
-      "autoFix": true,
-      "language": "typescriptreact"
-    }
-  ],
   "files.trimTrailingWhitespace": true,
   "javascript.validate.enable": false,
   "markdownlint.config": {
