--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vapurrmaid/validate",
   "version": "0.1.0-beta.2",
-  "description": "Zero-dependency lightweight class for assisting in highly-readable, maintainable validation. Inspired by the Java library org.apache.commons.lang3.Validate and its use in Domain Driven Design.",
+  "description": "An incredibly simple, lightweight, zero-dependency package for writing maintainable, easy-to-read validation assertions. Inspired by the Java library org.apache.commons.lang3.Validate, NodeJS assert, Chai BDD assertions and Jest matchers.",
   "keywords": [
     "assertion",
     "common",
