--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,13 @@
   ],
   "root": true,
   "rules": {
+    "import/extensions": [
+      "error",
+      "never",
+      {
+        "json": "always"
+      }
+    ],
     "import/prefer-default-export": "off",
     "import/no-default-export": [
       "error"
