--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "lint": "npm run lint:js && npm run lint:md",
     "lint:js": "eslint . --color --ext .ts src",
     "lint:md": "markdownlint --ignore \"**/node_modules/**\" .",
-    "release": "release-it",
-    "release:beta": "release-it --preRelease=beta",
+    "release": "cross-env ./scripts/release-it.sh",
+    "release:beta": "cross-env ./scripts/release-it.sh --beta",
     "test": "jest",
     "test:coverage": "npm run clean:jest && jest --colors --coverage",
     "test:watch": "jest --watch"
