--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,16 @@
     "**/__mocks__/*.ts",
     "node_modules",
     "**/*.test.ts"
-  ]
+  ],
+  "typedocOptions": {
+    "exclude": "./src/ValidateNegation.ts",
+    "excludeExternals": true,
+    "mode": "file",
+    "out": "docs",
+    "readme": "none",
+    "theme": "minimal",
+    "toc": [
+      "Validate"
+    ]
+  }
 }
