--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,16 @@ install:
 script:
   - npm run lint
   - npm run test
+
+before_deploy:
   - npm run build:clean
+
+deploy:
+  github_token: $TRAVIS_GITHUB_TOKEN
+  keep_history: true
+  local_dir: docs
+  on:
+    branch: master
+  provider: pages
+  skip_cleanup: true
+  target_branch: gh-pages
