add clean:docs script

--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "build": "tsc -p .",
     "build:clean": "npm run clean:build && npm run build",
     "build:docs": "typedoc",
-    "clean": "npm run clean:build && npm run clean:jest",
+    "clean": "npm run clean:build && npm run clean:docs && npm run clean:jest",
     "clean:build": "rimraf dist",
+    "clean:docs": "rimraf docs",
     "clean:jest": "jest --clearCache && rimraf coverage",
     "lint": "npm run lint:js && npm run lint:md",
     "lint:js": "eslint . --color --ext .ts src",
