--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,30 +2,18 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "declaration": true,
-    "declarationMap": true,
     "diagnostics": true,
     "forceConsistentCasingInFileNames": true,
-    "inlineSources": true,
-    "lib": [
-      "es2017"
-    ],
-    "module": "commonjs",
+    "module": "CommonJS",
     "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "dist",
-    "resolveJsonModule": true,
     "rootDir": "src",
-    "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "ES6"
   },
-  "exclude": [
-    "**/__mocks__/*.ts",
-    "node_modules",
-    "**/*.test.ts"
-  ],
+  "exclude": ["**/__mocks__/*.ts", "node_modules", "**/*.test.ts"],
   "typedocOptions": {
     "exclude": "./src/ValidateNegation.ts",
     "excludeExternals": true,
@@ -33,8 +21,6 @@
     "out": "docs",
     "readme": "none",
     "theme": "minimal",
-    "toc": [
-      "Validate"
-    ]
+    "toc": ["Validate"]
   }
 }
