--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,47 +1,33 @@
 {
   "extends": [
-    "airbnb-base",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
     "plugin:import/typescript"
   ],
   "overrides": [
     {
       "env": {
+        "node": true
+      },
+      "files": ["jest.config.js"]
+    },
+    {
+      "env": {
         "jest": true
       },
-      "files": [
-        "*.test.ts"
-      ]
+      "files": ["*.test.ts"]
     }
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "root": true,
   "rules": {
-    "import/extensions": [
-      "error",
-      "never",
-      {
-        "json": "always"
-      }
-    ],
     "import/prefer-default-export": "off",
-    "import/no-default-export": [
-      "error"
-    ],
-    "indent": "off",
-    "no-console": "off",
-    "@typescript-eslint/indent": [
-      "error",
-      2
-    ],
+    "import/no-default-export": ["error"],
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/semi": [
-      "error"
-    ]
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/semi": ["error"]
   }
 }
