--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clean:build": "rimraf dist",
     "clean:docs": "rimraf docs",
     "clean:jest": "jest --clearCache && rimraf coverage",
+    "format": "prettier print-width=80 prose-wrap=always --write **/*",
     "lint": "eslint . --color --ext .ts src",
     "release": "cross-env ./scripts/release-it.sh",
     "release:beta": "cross-env ./scripts/release-it.sh --beta",
@@ -51,7 +52,6 @@
     "@typescript-eslint/parser": "^2.23.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
