--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "clean:build": "rimraf dist",
     "clean:docs": "rimraf docs",
     "clean:jest": "jest --clearCache && rimraf coverage",
-    "format": "prettier print-width=80 prose-wrap=always --write **/*",
+    "format": "prettier print-width=80 prose-wrap=always **/*",
+    "format:check": "yarn format --check",
+    "format:write": "yarn format --write",
     "lint": "eslint . --color --ext .ts src",
     "release": "cross-env ./scripts/release-it.sh",
     "release:beta": "cross-env ./scripts/release-it.sh --beta",
