--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
   "rules": {
     "import/prefer-default-export": "off",
     "import/no-default-export": ["error"],
+    "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/semi": ["error"]
