--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
 {
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/errors",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "prettier/@typescript-eslint"
   ],
   "overrides": [
     {
@@ -20,10 +24,8 @@
       "files": ["*.test.ts"]
     }
   ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "root": true,
   "rules": {
+    "eqeqeq": "error",
     "import/prefer-default-export": "off",
     "import/no-default-export": ["error"],
     "@typescript-eslint/explicit-function-return-type": "off",
