--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/jest": "^26.0.16",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
-    "@vapurrmaid/prettier-config": "^0.1.1",
+    "@vapurrmaid/prettier-config": "^0.3.1",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
@@ -62,7 +62,8 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.5.3",
     "live-server": "^1.2.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^1.1.1",
     "release-it": "^13.6.4",
     "rimraf": "^3.0.0",
     "ts-jest": "^26.1.1",
