Simplify lint-staged prettier command

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
       "prettier --write"
     ],
     "*.{json,md,yaml,yml}": [
-      "prettier --print-width=80 --prose-wrap=always --write"
+      "prettier --write"
     ]
   }
 }
