--- a/package.json
+++ b/package.json
@@ -51,23 +51,24 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "@vapurrmaid/prettier-config": "^0.1.1",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "lint-staged": "^10.2.11",
+    "@types/jest": "^26.0.16",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "@vapurrmaid/prettier-config": "^0.3.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^4.3.4",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "live-server": "^1.2.1",
-    "prettier": "^2.0.5",
-    "release-it": "^13.6.4",
+    "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^1.1.1",
+    "release-it": "^14.2.2",
     "rimraf": "^3.0.0",
-    "ts-jest": "^26.1.1",
-    "typedoc": "^0.17.8",
-    "typescript": "^3.9.6"
+    "ts-jest": "^26.4.4",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.1.2"
   },
   "husky": {
     "hooks": {
@@ -80,7 +81,7 @@
       "prettier --write"
     ],
     "*.{json,md,yaml,yml}": [
-      "prettier --print-width=80 --prose-wrap=always --write"
+      "prettier --write"
     ]
   }
 }
