--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,15 @@
-# Build
+# Project-specific
+coverage
 dist
 docs
-
-# Dependencies
-*.tgz
-jspm_packages/
-.npm
-node_modules/
-.yarn-integrity
-
-# Diagnostic Reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Environment
-.env
-.env.test
-
-# ES Lint
+node_modules
 .eslintcache
 
-# Logs
-*.log
-lerna-debug.log*
-logs
+# Misc
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Testing & Coverage
-*.lcov
-coverage
-lib-cov
-.nyc_output
-
-# TypeScript
-*.tsbuildinfo
-typings/
-
-# Vs Code
+.DS_Store
+.env
+.npm
 .vscode
