--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "clean:build": "rimraf dist",
     "clean:docs": "rimraf docs",
     "clean:jest": "jest --clearCache && rimraf coverage",
-    "format": "prettier src",
-    "format:check": "yarn format --check",
-    "format:write": "yarn format --write",
-    "lint": "eslint . --color --ext .ts src",
-    "pre-release": "yarn && yarn test && yarn lint && yarn format:check && yarn build:clean",
+    "format": "prettier --check **/**",
+    "format:write": "prettier --write **/**",
+    "lint": "eslint . --color --ext .ts --max-warnings 0",
+    "lint:fix": "eslint . --color --ext .ts --fix",
+    "pre-release": "yarn && yarn test && yarn lint && yarn format && yarn build:clean",
     "release": "yarn pre-release && release-it",
     "release:beta": "yarn pre-release && release-it --preRelease=beta",
     "serve:docs": "live-server docs",
